--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,6 @@ repositories {
 }
 
 dependencies {
+    complie 'com.google.code.gson:gson:1.7.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
