--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,6 @@ repositories {
 }
 
 dependencies {
-    complie 'com.google.code.gson:gson:1.7.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
