--- a/build.gradle
+++ b/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
+    compile group: 'com.sparkjava', name: 'spark-core', version: '2.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
