--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.0.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
