--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,8 @@ dependencies {
     compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.0.0'
+    compile group: 'com.sparkjava', name: 'spark-template-freemarker', version: '2.0.0'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.7'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.7'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
